First chapter of documentation done

--- a/documentation/original/1. Installation.md
+++ b/documentation/original/1. Installation.md
@@ -1,3 +1,22 @@
 1. Installation
 ===
 
+Installing tartempion is easy. Just run the following:
+
+    npm install -g tartempion
+
+Don't forget the `-g` parameter to install it globally. It may require you
+to run this as root though. If you only install it locally, using the
+command-line utility will be more painful. (You'll have to use it this way:
+`node node_modules/.bin/tartempion`, which is a pain.)
+
+If you want to get the last version from the git repository, here are the instructions:
+
+    git clone https://github.com/Ralt/tartempion
+    cd tartempion
+    # x.y.z is the current last version
+    git checkout x.y.z
+
+tartempion's release management only uses git tags. The master branch is the one
+being used for development.
+
