--- a/documentation/original/1. Installation.md
+++ b/documentation/original/1. Installation.md
@@ -8,7 +8,7 @@ Installing tartempion is easy. Just run the following:
 Don't forget the `-g` parameter to install it globally. It may require you
 to run this as root though. If you only install it locally, using the
 command-line utility will be more painful. (You'll have to use it this way:
-`node node_modules/.bin/tartempion`, which is a pain.)
+`./node_modules/.bin/tartempion`, which is a pain.)
 
 If you want to get the last version from the git repository, here are the instructions:
 
