Chapter two about the CLI written.

--- a/documentation/original/2. Command-line interface.md
+++ b/documentation/original/2. Command-line interface.md
@@ -1,3 +1,122 @@
 2. Command-line interface
 ===
 
+tartempion provides a command-line utility to generate projects, pies,
+and also to run the tests or the application. (You will find out [later][1]
+what a pie is, please be patient. For now, just think it's a controller.)
+
+2.1. Getting help
+---
+
+I believe that every project shouldn't need documentation. This is why
+the CLI utility provides help. Just type:
+
+    tartempion help
+
+    # or
+    tartempion
+
+    # or
+    tartempion --help
+
+These three commands will show you the following screen:
+
+    ~$ tartempion
+
+    Usage: tartempion [options] [command]
+
+    Commands:
+
+        create-project <project>
+        Create a project named <project>
+
+        create-pie <pie>
+        Create a pie named <pie>
+
+        run
+        Run tartempion
+
+        test <pie>
+        Run the tests in the pie <pie>
+
+        test-all
+        Run the tests in all the pies
+
+        help
+        Show help
+
+    Options:
+
+        -h, --help     output usage information
+        -V, --version  output the version number
+
+As you can see, there are five useful commands.
+
+2.2. Creating a project
+---
+
+tartempion provides an easy way to start a project. Just type:
+
+    tartempion create-project someProject
+
+Replace `someProject` with your project's name. It will create a folder
+named `someProject` and add the boilerplate files to it. Here are the
+files and folders it creates:
+
+    someProject/
+        locals/
+            locals.js
+        middlewares/
+            middlewares.js
+        pies/
+        templates/
+        config.json
+        package.json
+        pies.json
+        tartempion.js
+
+2.3. Creating a pie
+---
+
+You don't know yet what a pie is, but you will soon find out it is
+an essential notion to tartempion. Hopefully for you, the CLI utility
+also provides an easy way to create a pie. Just type:
+
+    tartempion create-pie pieName
+
+Replace `pieName` with your pie's name. This command does two things:
+
+- It creates a folder named `pieName` in the `pies/` folder.
+- It updates the `pies.json` file to add information about the new pie.
+
+Here are the files and folder created in the new pie:
+
+    pies/
+        pieName/
+            test/
+            controller.js
+            model.js
+            routes.json
+
+2.4. Running tartempion
+---
+
+Once you will have added the pies and coded your application, running
+the final application is easy. Just type:
+
+    tartempion run
+
+2.5. Testing the pies
+---
+
+tartempion provides an easy way to run the tests you will add to the pies.
+Just type:
+
+    tartempion test pieName
+
+If you want to run the tests in all the pies, just type:
+
+    tartempion test-all
+
+   [1]: #4
+
