Chapter 3 about configuration is done

--- a/documentation/original/2. Command-line interface.md
+++ b/documentation/original/2. Command-line interface.md
@@ -3,7 +3,7 @@
 
 tartempion provides a command-line utility to generate projects, pies,
 and also to run the tests or the application. (You will find out [later][1]
-what a pie is, please be patient. For now, just think it's a controller.)
+what a pie is, please be patient. For now, just think it's an entity.)
 
 2.1. Getting help
 ---
