--- a/documentation/original/3. Configuration.md
+++ b/documentation/original/3. Configuration.md
@@ -15,7 +15,7 @@ The configuration is divided in 5 parts:
 
 You can see an example of a basic `config.json` [here][1].
 
-3.1. `server`
+3.1. server
 ---
 
 The `server` part has the following properties:
@@ -23,7 +23,7 @@ The `server` part has the following properties:
 - `address`: the address the server listens on.
 - `port`: the port the server listens on.
 
-3.2. `templates`
+3.2. templates
 ---
 
 The `templates` part has the following properties:
@@ -31,7 +31,7 @@ The `templates` part has the following properties:
 - `folder`: the folder in which the templates reside.
 - `template engine`: the template engine used.
 
-3.3. `session`
+3.3. session
 ---
 
 The `session` part has the following properties:
@@ -39,23 +39,24 @@ The `session` part has the following properties:
 - `secret`: the secret key used to crypt your cookies.
 - `maxAge`: the expire time of your sessions.
 
-3.4. `database`
+3.4. database
 ---
 
 The `databases` part has basically one field: the name of the database
 used. Depending on the database used, the properties differ.
 
-### 3.4.1. `mongodb`
+### 3.4.1. mongodb
 
 For `mongodb`, you can read [the official documentation][2]
 to see what are the options.
 
-3.5. `test engine`
+3.5. test engine
 ---
 
 The `test engine` part has only this property for now:
 
 - `name`: name of the test engine used.
+
 
    [1]: https://github.com/Ralt/tartempion/blob/master/cli/default/project/config.json
    [2]: http://mongodb.github.com/node-mongodb-native/api-generated/db.html
