Fixed wrong links

--- a/documentation/original/3. Configuration.md
+++ b/documentation/original/3. Configuration.md
@@ -13,7 +13,7 @@ The configuration is divided in 5 parts:
 - `database`: about the database used.
 - `test engine`: about the test engine used.
 
-You can see an example of a basic `config.json` [here][1].
+You can see an example of a basic `config.json` [here](https://github.com/Ralt/tartempion/blob/master/cli/default/project/config.json).
 
 3.1. server
 ---
@@ -47,7 +47,7 @@ used. Depending on the database used, the properties differ.
 
 ### 3.4.1. mongodb
 
-For `mongodb`, you can read [the official documentation][2]
+For `mongodb`, you can read [the official documentation](http://mongodb.github.com/node-mongodb-native/api-generated/db.html)
 to see what are the options.
 
 3.5. test engine
@@ -58,6 +58,4 @@ The `test engine` part has only this property for now:
 - `name`: name of the test engine used.
 
 
-   [1]: https://github.com/Ralt/tartempion/blob/master/cli/default/project/config.json
-   [2]: http://mongodb.github.com/node-mongodb-native/api-generated/db.html
 
