--- a/documentation/original/4. Pies.md
+++ b/documentation/original/4. Pies.md
@@ -1,3 +1,70 @@
 4. Pies
 ===
 
+4.1. Introduction
+---
+
+A pie is an entity. It is similar to an app in django. Or a mojito in mojito.
+
+A pie has one controller and one model.
+
+tartempion uses the concept of a pie so that you can have decoupled business code.
+This way, you can code your "user" pie for a project, and reuse this pie in another
+project, by simply copy pasting it. Rumors say that someone is thinking of building
+a pie package manager.
+
+Don't forget that tartempion relies on express to do its work. So you will see some
+similarities.
+
+4.2. The routes
+---
+
+To define the routes that a pie handles, the `routes.json` file is there.
+
+tartempion believes that writing JSON files is less prone to errors than writing
+code, so it tries to use them as much as possible.
+
+Here is a sample of a `routes.json` file:
+
+    {
+        "get": [
+            { "/": "index" },
+            { "/user/login": {
+                "method": "getLogin",
+                "middlewares": [
+                    "requireGuest"
+                ]}
+            }
+        ],
+        "post": [
+            { "/user/login": {
+                "method": "postLogin",
+                "middlewares": [
+                    "requireGuest"
+                ]}
+            },
+            { "/user/logout": {
+                "method": "logout",
+                "middlewares": [
+                    "requireLogged"
+                ]}
+            }
+        ]
+    }
+
+You can see how such a file is structured:
+
+- There are two main array properties: `get` and `post`.
+- These arrays contain objects defining each route.
+- Each object has the route as a key.
+- The value can be either a string or a method.
+    - If it's a string, it is the controller's method used to handle the route.
+    - If it's an object, this object has two properties:
+        - The `method` property defines the controller's method.
+        - The `middlewares` property is an array of the middlewares used.
+
+4.3. The controllers
+---
+
+
+
