Advanced a little bit on the pies chapter

--- a/documentation/original/4. Pies.md
+++ b/documentation/original/4. Pies.md
@@ -16,7 +16,38 @@ a pie package manager.
 Don't forget that tartempion relies on express to do its work. So you will see some
 similarities.
 
-4.2. The routes
+4.2. Definition
+---
+
+You can define the pies used in the `pies.json` file. By default, the CLI utility
+does this for you, so you may not need it. But here is how a pie is defined:
+
+    {
+        "pieName": {
+            "path": "path/to/pieName"
+        }
+    }
+
+`path/to/pieName` starts at the `pies/` folder.
+
+If you want to use a pie in another pie, this is where you define the dependencies.
+Here is an example:
+
+    {
+        "pieName" {
+            "path": "pieName"
+        },
+        "otherPie": {
+            "path": "otherPie",
+            "dependencies": [
+                "pieName"
+            ]
+        }
+    }
+
+You will see in 4.4. how to use these dependencies.
+
+4.3. The routes
 ---
 
 To define the routes that a pie handles, the `routes.json` file is there.
@@ -63,8 +94,52 @@ You can see how such a file is structured:
         - The `method` property defines the controller's method.
         - The `middlewares` property is an array of the middlewares used.
 
-4.3. The controllers
+4.4. The controllers
 ---
 
+As you could see, we defined the controller's methods in the `routes.json` file.
+These controller's methods are to be found in the `controller.js` file of the pie.
 
+To follow the example of 4.2., here is a controller's example:
+
+    module.exports = {
+        getLogin: function( req, res ) {
+        },
+
+        postLogin: function( req, res ) {
+        },
+
+        logout: function( req, res ) {
+        }
+    };
+
+Each controller's method has two parameters:
+
+- `req`: the request parameter.
+- `res`: the response parameter.
+
+Now, there is something very important to know:
+
+**Each controller has its model's methods available through `this.model`.**
+
+This means that after defining a `get( username, callback )` method in the model,
+you can use it this way in the controller:
+
+    module.exports = {
+        getLogin: function( req, res ) {
+
+            // See the very important thing here:
+            this.model.get( req.params.username, function() {} );
+        });
+    };
+
+And it works.
+
+If you have defined dependencies in the `pies.json` file, you can access the other
+pie's controller methods through `this.pieName`.
+
+4.5. The models
+---
+
+The model's methods are defined in the `model.js` file of a pie.
 
