Added a lot of documentation overall. Getting some rest now.

--- a/documentation/original/4. Pies.md
+++ b/documentation/original/4. Pies.md
@@ -143,3 +143,16 @@ pie's controller methods through `this.pieName`.
 
 The model's methods are defined in the `model.js` file of a pie.
 
+To follow up on the previous example, here is the `model.js` file:
+
+    module.exports = {
+        get: function( username, callback ) {
+            // Use "this.db" to access the database
+            // specified in the configuration.
+            callback();
+        }
+    };
+
+You saw that comment right. You can access the methods of your database
+through `this.db`. Just like this.
+
